Issue: Cannot see scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,18 +6,8 @@ html, body {
     position: fixed;
     overflow: visible;
 
-    background-color: rgba(30, 31, 38, 0.92);
-    /* background-image: 
-        linear-gradient(
-            rgba(30, 31, 38, 0.92),
-            rgba(30, 31, 38, 0.92)
-        ),
-        url("https://i.imgur.com/OOjXLOX.png"); */
+    background: rgba(30, 31, 38, 0.92);
 
-    background-attachment: fixed;
-    background-position: top right;
-    background-repeat: no-repeat;
-    background-size: cover;
     min-width: 100%;
     min-height: 100%;
 }
